# GTKwinInstaller

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.rs  installer.env.example
.github/workflows/: main.yml
app/: LICENSE  MyApp.cmd
po/: POTFILES.in  gtkwininstaller.pot  pl.po
src/: config.rs  main.rs  setup.rs
